tests/fail/0003_nothing_arithmetic.ee
fn main() {
    debugPrint(nothing * 2);
}
